--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,12 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="212" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afm-38-sKB">
-                                <rect key="frame" x="132" y="28" width="111" height="84"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
-                                <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="degrees Fahrenheit " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S3j-Hb-mZJ">
                                 <rect key="frame" x="35" y="120" width="304" height="43"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
@@ -48,19 +42,26 @@
                                 <color key="textColor" red="0.88235294117647056" green="0.34509803921568627" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="value" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XDa-ph-bLL">
+                                <rect key="frame" x="63" y="28" width="250" height="84"/>
+                                <color key="textColor" red="0.88235294119999996" green="0.34509803919999998" blue="0.16078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.95686274509803915" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="JwO-Z3-p1F" firstAttribute="centerX" secondItem="S3j-Hb-mZJ" secondAttribute="centerX" id="DQ3-hr-Msq"/>
-                            <constraint firstItem="afm-38-sKB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="GQz-BE-jZw"/>
-                            <constraint firstItem="afm-38-sKB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NYx-9o-gHx"/>
-                            <constraint firstItem="T9l-Qj-GMK" firstAttribute="top" secondItem="PlO-wJ-0Ka" secondAttribute="bottom" constant="8" id="NeP-om-gii"/>
-                            <constraint firstItem="JwO-Z3-p1F" firstAttribute="top" secondItem="S3j-Hb-mZJ" secondAttribute="bottom" constant="8" id="Po8-sN-iUh"/>
-                            <constraint firstItem="S3j-Hb-mZJ" firstAttribute="top" secondItem="afm-38-sKB" secondAttribute="bottom" constant="8" id="XT9-Bp-xqV"/>
-                            <constraint firstItem="T9l-Qj-GMK" firstAttribute="centerX" secondItem="S3j-Hb-mZJ" secondAttribute="centerX" id="fRM-z7-1kb"/>
-                            <constraint firstItem="PlO-wJ-0Ka" firstAttribute="centerX" secondItem="S3j-Hb-mZJ" secondAttribute="centerX" id="jgF-AY-QmF"/>
-                            <constraint firstItem="PlO-wJ-0Ka" firstAttribute="top" secondItem="JwO-Z3-p1F" secondAttribute="bottom" constant="8" id="lYK-Xj-WMF"/>
-                            <constraint firstItem="afm-38-sKB" firstAttribute="centerX" secondItem="S3j-Hb-mZJ" secondAttribute="centerX" id="vmn-nD-hCX"/>
+                            <constraint firstItem="T9l-Qj-GMK" firstAttribute="top" secondItem="PlO-wJ-0Ka" secondAttribute="bottom" constant="8" symbolic="YES" id="4vo-eC-dzB"/>
+                            <constraint firstItem="JwO-Z3-p1F" firstAttribute="centerX" secondItem="PlO-wJ-0Ka" secondAttribute="centerX" id="7i1-Fl-5TA"/>
+                            <constraint firstItem="XDa-ph-bLL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="63" id="8Ca-RL-BHu"/>
+                            <constraint firstItem="S3j-Hb-mZJ" firstAttribute="centerX" secondItem="JwO-Z3-p1F" secondAttribute="centerX" id="DFl-0w-oKC"/>
+                            <constraint firstItem="XDa-ph-bLL" firstAttribute="centerX" secondItem="PlO-wJ-0Ka" secondAttribute="centerX" id="Fxa-Hd-vdh"/>
+                            <constraint firstItem="S3j-Hb-mZJ" firstAttribute="top" secondItem="XDa-ph-bLL" secondAttribute="bottom" constant="8" symbolic="YES" id="Kuh-Tc-4a2"/>
+                            <constraint firstItem="XDa-ph-bLL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="8" id="VQP-4D-Bhq"/>
+                            <constraint firstItem="PlO-wJ-0Ka" firstAttribute="centerX" secondItem="T9l-Qj-GMK" secondAttribute="centerX" id="nV5-Gz-tVB"/>
+                            <constraint firstItem="S3j-Hb-mZJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rt8-nh-CnQ"/>
+                            <constraint firstItem="PlO-wJ-0Ka" firstAttribute="top" secondItem="JwO-Z3-p1F" secondAttribute="bottom" constant="8" symbolic="YES" id="siS-BK-K50"/>
+                            <constraint firstItem="JwO-Z3-p1F" firstAttribute="top" secondItem="S3j-Hb-mZJ" secondAttribute="bottom" constant="8" symbolic="YES" id="zqT-Fe-TyQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
