Capitulo 6 segunda parte

--- a/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
+++ b/WorldTrotter/WorldTrotter/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Convert-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConversionViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
@@ -73,7 +73,7 @@
                             <outletCollection property="gestureRecognizers" destination="Dev-RM-3aQ" appends="YES" id="jqK-48-zTB"/>
                         </connections>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="mQR-gs-h9S"/>
+                    <tabBarItem key="tabBarItem" title="Convert" image="ConvertIcon" id="mQR-gs-h9S"/>
                     <connections>
                         <outlet property="celsiusLabel" destination="PlO-wJ-0Ka" id="C0w-Tu-md2"/>
                         <outlet property="textField" destination="XDa-ph-bLL" id="vPl-14-nbT"/>
@@ -88,19 +88,19 @@
             </objects>
             <point key="canvasLocation" x="1975" y="134"/>
         </scene>
-        <!--Item-->
+        <!--Map-->
         <scene sceneID="m7D-zd-HdA">
             <objects>
-                <viewController id="voz-Yz-AVh" sceneMemberID="viewController">
+                <viewController id="voz-Yz-AVh" customClass="MapViewController" customModule="WorldTrotter" customModuleProvider="target" sceneMemberID="viewController">
                     <mapView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="QfK-2E-KN1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </mapView>
-                    <tabBarItem key="tabBarItem" title="Item" id="2J9-sw-VoT"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="MapIcon" id="2J9-sw-VoT"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xwa-9g-OLT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1487" y="648"/>
+            <point key="canvasLocation" x="975" y="897"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="qS1-aD-PFG">
@@ -108,12 +108,13 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="5tQ-qF-toL" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="6L1-zg-5XO">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="voz-Yz-AVh" kind="relationship" relationship="viewControllers" id="l7z-2O-Ogs"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="wkk-YL-gsq"/>
+                        <segue destination="voz-Yz-AVh" kind="relationship" relationship="viewControllers" id="l7z-2O-Ogs"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ifa-s0-qhE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -121,4 +122,8 @@
             <point key="canvasLocation" x="976" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ConvertIcon" width="48" height="32"/>
+        <image name="MapIcon" width="48" height="32"/>
+    </resources>
 </document>
