--- a/Capitulo15/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Capitulo15/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -17,9 +17,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="wAZ-I2-ZkT">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AJu-aO-1Vc">
+                                    <rect key="frame" x="191.5" y="15" width="175.5" height="30"/>
+                                    <state key="normal" title="Add"/>
+                                    <connections>
+                                        <action selector="addNewItem:" destination="rqJ-ic-45B" eventType="touchUpInside" id="0zb-ke-uPY"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rsm-rK-5kc">
+                                    <rect key="frame" x="8" y="15" width="175.5" height="30"/>
+                                    <state key="normal" title="Edit"/>
+                                    <connections>
+                                        <action selector="toggleEditingMode:" destination="rqJ-ic-45B" eventType="touchUpInside" id="s9P-n4-SiD"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="rsm-rK-5kc" firstAttribute="centerY" secondItem="wAZ-I2-ZkT" secondAttribute="centerY" id="7ys-Td-Epk"/>
+                                <constraint firstItem="AJu-aO-1Vc" firstAttribute="width" secondItem="rsm-rK-5kc" secondAttribute="width" id="Jdx-jn-06r"/>
+                                <constraint firstItem="AJu-aO-1Vc" firstAttribute="centerY" secondItem="wAZ-I2-ZkT" secondAttribute="centerY" id="dRP-kd-KdM"/>
+                                <constraint firstItem="AJu-aO-1Vc" firstAttribute="leading" secondItem="rsm-rK-5kc" secondAttribute="trailing" constant="8" id="hay-ty-p6j"/>
+                                <constraint firstItem="rsm-rK-5kc" firstAttribute="leading" secondItem="wAZ-I2-ZkT" secondAttribute="leading" constant="8" id="nmV-AI-bF6"/>
+                                <constraint firstAttribute="trailing" secondItem="AJu-aO-1Vc" secondAttribute="trailing" constant="8" id="s9u-g9-JtN"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="yPS-Wr-INF" detailTextLabel="OAY-Qp-vtb" style="IBUITableViewCellStyleValue1" id="bJd-il-XqO">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bJd-il-XqO" id="1ae-g6-RPF">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
