--- a/Capitulo15/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Capitulo15/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rqJ-ic-45B">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gAC-oB-0Ey">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--Homepwner-->
         <scene sceneID="rNZ-qG-Dvd">
             <objects>
                 <tableViewController id="rqJ-ic-45B" customClass="ItemsViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,38 +19,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="wAZ-I2-ZkT">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AJu-aO-1Vc">
-                                    <rect key="frame" x="191.5" y="15" width="175.5" height="30"/>
-                                    <state key="normal" title="Add"/>
-                                    <connections>
-                                        <action selector="addNewItem:" destination="rqJ-ic-45B" eventType="touchUpInside" id="0zb-ke-uPY"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rsm-rK-5kc">
-                                    <rect key="frame" x="8" y="15" width="175.5" height="30"/>
-                                    <state key="normal" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="rqJ-ic-45B" eventType="touchUpInside" id="s9P-n4-SiD"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstItem="rsm-rK-5kc" firstAttribute="centerY" secondItem="wAZ-I2-ZkT" secondAttribute="centerY" id="7ys-Td-Epk"/>
-                                <constraint firstItem="AJu-aO-1Vc" firstAttribute="width" secondItem="rsm-rK-5kc" secondAttribute="width" id="Jdx-jn-06r"/>
-                                <constraint firstItem="AJu-aO-1Vc" firstAttribute="centerY" secondItem="wAZ-I2-ZkT" secondAttribute="centerY" id="dRP-kd-KdM"/>
-                                <constraint firstItem="AJu-aO-1Vc" firstAttribute="leading" secondItem="rsm-rK-5kc" secondAttribute="trailing" constant="8" id="hay-ty-p6j"/>
-                                <constraint firstItem="rsm-rK-5kc" firstAttribute="leading" secondItem="wAZ-I2-ZkT" secondAttribute="leading" constant="8" id="nmV-AI-bF6"/>
-                                <constraint firstAttribute="trailing" secondItem="AJu-aO-1Vc" secondAttribute="trailing" constant="8" id="s9u-g9-JtN"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="65" id="bJd-il-XqO" customClass="ItemCell" customModule="Homepwner" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="375" height="65"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bJd-il-XqO" id="1ae-g6-RPF" customClass="ItemCell" customModule="Homepwner" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="64.5"/>
@@ -62,21 +34,25 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2LW-m7-vUr">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2LW-m7-vUr">
                                             <rect key="frame" x="16" y="38" width="31" height="15"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiZ-41-6LD">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yiZ-41-6LD">
                                             <rect key="frame" x="16" y="11" width="42" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="2LW-m7-vUr" secondAttribute="bottom" constant="1" id="Oph-uJ-Eou"/>
+                                        <constraint firstItem="2LW-m7-vUr" firstAttribute="leading" secondItem="1ae-g6-RPF" secondAttribute="leadingMargin" id="RfE-nV-3dV"/>
+                                        <constraint firstItem="yiZ-41-6LD" firstAttribute="top" secondItem="1ae-g6-RPF" secondAttribute="topMargin" id="dGv-PY-jfU"/>
+                                        <constraint firstItem="yiZ-41-6LD" firstAttribute="leading" secondItem="1ae-g6-RPF" secondAttribute="leadingMargin" id="wal-qC-u8h"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="nameLabel" destination="yiZ-41-6LD" id="Gpw-V2-9uw"/>
@@ -91,10 +67,17 @@
                             <outlet property="delegate" destination="rqJ-ic-45B" id="pbb-I0-yPE"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Homepwner" id="sAl-JT-2lr">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="CUI-WI-lnA">
+                            <connections>
+                                <action selector="addNewItem:" destination="rqJ-ic-45B" id="MiU-Cc-ajr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PCv-UF-X49" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="441" y="-235"/>
+            <point key="canvasLocation" x="1380" y="-235.23238380809596"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="5ur-1P-3dX">
@@ -105,7 +88,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="cSZ-rA-9zO">
-                                <rect key="frame" x="10" y="28" width="355" height="631"/>
+                                <rect key="frame" x="10" y="72" width="355" height="587"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="RZH-Sv-sVp">
                                         <rect key="frame" x="0.0" y="0.0" width="355" height="30"/>
@@ -121,6 +104,9 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="gky-J8-lWQ" id="awX-Xl-fZ9"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -138,6 +124,9 @@
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="gky-J8-lWQ" id="jat-g7-UDM"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
@@ -154,12 +143,15 @@
                                                 <rect key="frame" x="53" y="0.0" width="302" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="gky-J8-lWQ" id="xW6-Gp-648"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8M5-EM-TKx">
-                                        <rect key="frame" x="0.0" y="114" width="355" height="517"/>
+                                        <rect key="frame" x="0.0" y="114" width="355" height="473"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -172,6 +164,7 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="cSZ-rA-9zO" firstAttribute="leading" secondItem="uJm-Ht-YjH" secondAttribute="leading" constant="10" id="BIU-vT-duB"/>
                             <constraint firstItem="uJm-Ht-YjH" firstAttribute="trailing" secondItem="cSZ-rA-9zO" secondAttribute="trailing" constant="10" id="Liv-nA-8t4"/>
@@ -179,6 +172,9 @@
                             <constraint firstItem="cSZ-rA-9zO" firstAttribute="top" secondItem="uJm-Ht-YjH" secondAttribute="top" constant="8" id="m7Z-Pg-kYb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uJm-Ht-YjH"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="pBx-jc-PQ5" appends="YES" id="oba-Tr-rDL"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="8M5-EM-TKx" id="PEh-jb-z3A"/>
@@ -188,8 +184,31 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NQc-Rn-vUv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="pBx-jc-PQ5">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="gky-J8-lWQ" id="uv3-bn-eM5"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1218" y="-235"/>
+            <point key="canvasLocation" x="2156" y="-235.23238380809596"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="S5a-c7-dnO">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="gAC-oB-0Ey" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xLA-Ko-Kqh">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rqJ-ic-45B" kind="relationship" relationship="rootViewController" id="hws-Ga-1xO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fro-0T-dac" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="440.80000000000001" y="-235.23238380809596"/>
         </scene>
     </scenes>
 </document>
